Bug 73723 - Weston-resizor does not maximize while it is animating
Summary: Weston-resizor does not maximize while it is animating
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-17 07:01 UTC by Anu Reddy
Modified: 2014-01-20 19:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-01-17 07:01:01 UTC
Steps:
1. Launch weston
2. Execute weston-resizor 
3. Use arrow keys to resize the window . This activates the resizing animation.
4. Maximize weston-resizor using tool bar buttons  while still it is animating
5. Observe weston-resizor does not maximize.

Actual Result:
weston-resizor maximizes only when it is not animating

Expected Result:
weston-resizor should maximize irrespective of animation


Software:
wayland (HEAD) 1.3.92-0-gc102c20
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g3a62718
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) 1.3.92-0-gb637a40
Comment 1 Kristian Høgsberg 2014-01-17 23:31:52 UTC
commit 6f394d59a110c73599174eb3a5d80c98e9b86494
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Fri Jan 17 15:31:33 2014 -0800

    resizor: Don't resize if maximized
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73723


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.