resizor: Don't resize if maximized

https://bugs.freedesktop.org/show_bug.cgi?id=73723